--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>React App</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Pacifico" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   </head>
-  <body>
+    <body class="animated zoomIn">
     <script>
 
       window.fbAsyncInit = function() {
